<resources>
    <string name="app_name">Cuide da Cidade</string>

    <string name="jan">jan</string>
    <string name="feb">fev</string>
    <string name="mar">mar</string>
    <string name="apr">abr</string>
    <string name="may">mai</string>
    <string name="jun">jun</string>
    <string name="jul">jul</string>
    <string name="aug">ago</string>
    <string name="sep">set</string>
    <string name="oct">out</string>
    <string name="nov">nov</string>
    <string name="dec">dez</string>

    <string name="something_unexpected_happened_try_again_later">Ocorreu algo inesperado. Tente novamente mais tarde :(</string>
    <string name="you_signed_out_your_account">Você foi desconectado</string>
    <string name="choose_category">Escolha uma categoria</string>
    <string name="pending_requests">Solicitações pendentes</string>
    <string name="today">Hoje</string>
    <string name="yesterday">Ontem</string>
    <string name="categories_fragment_title">Abrir solicitação</string>
    <string name="all_requests">Todas as solicitações</string>
    <string name="requests">Solicitações</string>
    <string name="executed_request">Solicitação executada</string>
    <string name="request_details">Detalhes da solicitação</string>
    <string name="category">Categoria</string>
    <string name="request_date">Data da solicitação</string>
    <string name="request_completion_date">Data da conclusão</string>
    <string name="help_request_details">Descreva aqui sua solicitação</string>
    <string name="description">Descrição</string>
    <string name="send">Enviar</string>
    <string name="exit">Sair</string>
    <string name="saving">Salvando…</string>
    <string name="something_unexpected_happened_we_will_try_again">Ocorreu algo inesperado. Tentaremos novamente.</string>
    <string name="request_sent">Solicitação enviada</string>
    <string name="ok">OK</string>
    <string name="this_request_pending">Essa solicitação está pendente.</string>
    <string name="this_request_completed">Essa solicitação foi concluída.</string>
    <string name="you_need_login_continue">Você precisa logar para continuar</string>
    <string name="start">Vamos lá!</string>
    <string name="startup_message">Ajude a tornar sua cidade um lugar melhor para as pessoas</string>
    <string name="take_picture">Tirar foto</string>
    <string name="you_dont_have_camera_app">Você não possui um aplicativo de câmera</string>
</resources>