<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/RequestsFragment">

    <fragment
        android:id="@+id/RequestsFragment"
        android:name="com.cuidedacidade.ui.requests.RequestsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_requests">

        <action
            android:id="@+id/action_RequestsFragment_to_CategoriesFragment"
            app:destination="@id/CategoriesFragment" />
        <action
            android:id="@+id/action_RequestsFragment_to_AllRequestsFragment"
            app:destination="@id/AllRequestsFragment" />
    </fragment>
    <fragment
        android:id="@+id/CategoriesFragment"
        android:name="com.cuidedacidade.ui.categories.CategoriesFragment"
        android:label="@string/categories_fragment_title"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/AllRequestsFragment"
        android:name="com.cuidedacidade.ui.requests.AllRequestsFragment"
        android:label="@string/requests"
        tools:layout="@layout/fragment_requests">

        <action
            android:id="@+id/action_AllRequestsFragment_to_CategoriesFragment"
            app:destination="@id/CategoriesFragment" />
    </fragment>
</navigation>